--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
             rel="stylesheet"
         />
-        <title>Document</title>
+        <title>Score Keeper</title>
     </head>
     <body>
         <div class="container">
